# silly-agent

./: .gitignore  README.md  main.py  pyproject.toml
src/: agent.py  mcp_server.py  memory.py  reader.py  vector_store.py
src/mcp_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: chunker.py  conversation.py  embeddings.py  env.py  opensearch.py
